--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/public/icon-links.svg" />
+    <link rel="icon" type="image/png" href="/icon-links.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Importação da fonte utilizada no projeto -->
